Changes in header

--- a/index.html
+++ b/index.html
@@ -112,24 +112,29 @@
 					<div class="video-bg-texture" id="grained_container"></div>
 				</div>
 
+				<!-- Section Started -->
+			<div class="section started" id="section-started">
+
+				<!-- background -->
+				<div class="video-bg" style="background-image: url(images/image1.jpg);">
+					<div class="video-bg-mask"></div>
+					<div class="video-bg-texture" id="grained_container"></div>
+				</div>
+
 				<!-- started content -->
 				<div class="centrize full-width">
 					<div class="vertical-center">
 						<div class="started-content">
 							<h1 class="h-title">
-								Hello, I’m <strong>Nirja Gauchan</strong>, UI/UX Designer based in Kathmandu, Nepal.
+								Hello, I’m <strong>Nirja Gauchan</strong>, UX/UI Designer <br />
+								Based in Kathmandu, Nepal.
 							</h1>
-							<div class="h-subtitles">
-								<div class="h-subtitle typing-subtitle">
-									<p> I focus on <strong> Experience, Interaction & Interface. </strong></p>
-									<p> I enjoy shaping products from <strong> early concept to implementation. </strong></p>
-									<p>I strive to bridge the gap between <strong> people and products.</strong></p>
-								</div>
-								<span class="typed-subtitle"></span>
-							</div>
+						
 						</div>
 					</div>
 				</div>
+
+			</div>
 
 			</div>
 
