--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 	<meta name="author" content="neiyrzah" />
 
 	<!-- Title -->
-	<title>Cvio - Resume/CV Template</title>
+	<title>Nirja Gauchan - Contact </title>
 
 	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;display=swap&amp;subset=cyrillic" rel="stylesheet">
@@ -27,7 +27,9 @@
 	<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
 
-	<link rel="shortcut icon" href="images/favicons/favicon.ico">
+	<link rel="shortcut icon" type="image/x-icon" href="images/favicons/favicon.ico">
+
+
 
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125314689-9"></script>
@@ -118,11 +120,11 @@
 				<div class="centrize full-width">
 					<div class="vertical-center">
 						<div class="started-content">
-							<h1 class="h-title">Contacts</h1>
+							<h1 class="h-title">Contact</h1>
 							<div class="h-subtitles">
 								<div class="h-subtitle typing-bread">
 									<p class="breadcrumbs">
-										<a href="index.html">Home</a> / Contacts
+										<a href="index.html">Home</a> / Contact
 									</p>
 								</div>
 								<span class="typed-bread"></span>
@@ -142,7 +144,7 @@
 
 					<!-- title -->
 					<div class="title">
-						<div class="title_inner">Contacts Info</div>
+						<div class="title_inner">Contact Info</div>
 					</div>
 
 					<!-- contacts items -->
@@ -150,36 +152,21 @@
 
 						<div class="service-col">
 							<div class="service-item content-box">
-								<div class="icon"><span class="fas fa-phone"></span></div>
-								<div class="name">Phone</div>
-								<div class="text">+ (231) 456 67 89</div>
+								<div class="icon"><span class="fas fa-envelope"></span></div>
+								<div class="name">Email</div>
+								<div class="text"><a href="mailto:ngauchan@icloud.com">ngauchan@icloud.com</a></div>
 							</div>
 						</div>
 						
-						<div class="service-col">
-							<div class="service-item content-box">
-								<div class="icon"><span class="fas fa-envelope"></span></div>
-								<div class="name">Email</div>
-								<div class="text"><a href="mailto:steve-pearson@gmail.com">steve-pearson@gmail.com</a></div>
-							</div>
-						</div>
+				
 
 						<div class="service-col">
 							<div class="service-item content-box">
 								<div class="icon"><span class="fas fa-map-marker-alt"></span></div>
 								<div class="name">Address</div>
-								<div class="text">2621 W Pico Blvd, Los Angeles</div>
+								<div class="text"> Kathmandu, Nepal</div>
 							</div>
 						</div>
-
-						<div class="service-col">
-							<div class="service-item content-box">
-								<div class="icon"><span class="fas fa-user-tie"></span></div>
-								<div class="name">Freelance Available</div>
-								<div class="text">I am available for Freelance hire</div>
-							</div>
-						</div>
-
 					</div>
 
 					<div class="clear"></div>
@@ -192,7 +179,7 @@
 
 					<!-- title -->
 					<div class="title">
-						<div class="title_inner">Contacts Form</div>
+						<div class="title_inner"> Get in Touch </div>
 					</div>
 
 					<!-- form -->
@@ -227,26 +214,27 @@
 		
 		<!-- Footer -->
 		<footer class="footer">
-			<div class="copy">
-				<p>E: alejandroa@gmail.com</p>
-				<p>T: +1 (234) 567 80 98</p>
-			</div>
+			
 			<div class="soc-box">
 				<div class="follow-label">Follow Me</div>
 				<div class="soc">
-					<a target="_blank" href="https://www.pinterest.com/">
-						<span class="icon fab fa-pinterest"></span>
+					<a target="_blank" href="https://www.behance.net/nirjagauchan">
+						<span class="icon fab fa-behance"></span>
 					</a>
-					<a target="_blank" href="https://www.instagram.com/">
+					<a target="_blank" href="https://www.instagram.com/ngdesignsss">
 						<span class="icon fab fa-instagram"></span>
 					</a>
-					<a target="_blank" href="https://dribbble.com/">
+					<a target="_blank" href="https://dribbble.com/nirjagauchan">
 						<span class="icon fab fa-dribbble"></span>
+					</a>
+					<a target="_blank" href="https://facebook.com/nirjagauchandesigns">
+						<span class="icon fab fa-facebook"></span>
 					</a>
 				</div>
 			</div>
 			<div class="clear"></div>
 		</footer>
+
 
 		<!-- Lines -->
 		<div class="lines">
