--- a/contact.html
+++ b/contact.html
@@ -107,36 +107,36 @@
 		<!-- Wrapper -->
 		<div class="wrapper">
 
-			<!-- Section Started -->
-			<div class="section started section-title" id="section-started">
+		<!-- Section Started -->
+		<div class="section started layout-creative" id="section-started">
 
-				<!-- background -->
-				<div class="video-bg">
-					<div class="video-bg-mask"></div>
-					<div class="video-bg-texture" id="grained_container"></div>
-				</div>
+			<!-- background -->
+			<div class="video-bg">
+				<div class="video-bg-mask"></div>
+				<div class="video-bg-texture" id="grained_container"></div>
+			</div>
 
-				<!-- started content -->
-				<div class="centrize full-width">
-					<div class="vertical-center">
-						<div class="started-content">
-							<h1 class="h-title">Contact</h1>
-							<div class="h-subtitles">
-								<div class="h-subtitle typing-bread">
-									<p class="breadcrumbs">
-										<a href="index.html">Home</a> / Contact
-									</p>
-								</div>
-								<span class="typed-bread"></span>
+			<!-- started content -->
+			<div class="centrize full-width">
+				<div class="vertical-center">
+					<div class="started-content">
+						<h1 class="h-title">Contact me</h1>
+						<div class="h-subtitles">
+							<div class="h-subtitle typing-bread">
+								<p class="breadcrumbs">
+									<a href="index.html">Home</a> / Contact
+								</p>
 							</div>
+							<span class="typed-bread"></span>
 						</div>
 					</div>
 				</div>
-
-				<!-- mouse button -->
-				<a href="#" class="mouse_btn" style="display: none;"><span class="icon fas fa-chevron-down"></span></a>
-
 			</div>
+
+			<!-- mosue button -->
+			<a href="#" class="mouse_btn" style="display: none;"><span class="icon fas fa-chevron-down"></span></a>
+
+		</div>
 
 			<!-- Section Contacts Info -->
 			<div class="section contacts" id="section-contacts-info">
