--- a/resume.html
+++ b/resume.html
@@ -145,13 +145,12 @@
 
 					<!-- desc -->
 					<div class="desc">
-						<p>Hello! I’m Nirja Gauchan, UI/UX designer from Kathmandu, Nepal. 
-							I have over 7 years experience in design industry. I have worked in Media, Advertising, Academic and Software development industry.
-						My expertise includes UI/UX, Brand identity, Illustration, Interaction Design and Visual Designs. </p>
+						<p>Hello! I’m Nirja Gauchan, UI/UX designer from Kathmandu, Nepal. I have over 7 years <br>of Design Experience
+							in various industries such as Media, Advertising, Academic and Software development/ IT.
 						<div class="info-list">
 							<ul>
 							
-								<li><strong>Expertise:</strong> UI/UX (Web,Mobile), Microinteractions, Branding, Print</li>
+								<li><strong>Expertise:</strong> UI/UX (Web,Mobile), Motion Design, Branding, Print, Illustration & Photography</li>
 								<li><strong>Software skills:</strong> Sketch, Figma, Invision, Adobe Photoshop, Illustrator, Indesign, Aftereffects</li>
 							
 							</ul>
@@ -183,22 +182,43 @@
 									</div>
 								</div>
 							</li>
+
 							<li> 
-								<div class="name">Brand Identity</div>
+								<div class="name"> HTML, CSS </div>
 								<div class="progress ">
-									<div class="percentage" style="width: 70%;">
-										<span class="percent">70%</span>
+									<div class="percentage" style="width: 20%;">
+										<span class="percent">20%</span>
 									</div>
 								</div>
 							</li>
+
 							<li> 
-								<div class="name">Interactive Design</div>
+								<div class="name">Brand Identity</div>
+								<div class="progress ">
+									<div class="percentage" style="width: 40%;">
+										<span class="percent">40%</span>
+									</div>
+								</div>
+							</li>
+
+							<li> 
+								<div class="name"> Motion Design</div>
 								<div class="progress ">
 									<div class="percentage" style="width: 50%;">
 										<span class="percent">50%</span>
 									</div>
 								</div>
 							</li>
+
+							<li> 
+								<div class="name"> Illustration </div>
+								<div class="progress ">
+									<div class="percentage" style="width: 30%;">
+										<span class="percent"> 30%</span>
+									</div>
+								</div>
+							</li>
+
 							<li>
 								<div class="name"> Visual Design</div>
 								<div class="progress ">
@@ -244,7 +264,7 @@
 								</div>
 							</li>
 							<li> 
-								<div class="name">Adobe Photoshop</div>
+								<div class="name">Adobe CC Suite </div>
 								<div class="progress p85"> <!-- p85 = 85% circle fill color -->
 									<div class="percentage">
 										<span class="percent">85%</span>
