--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
 		<meta name="author" content="neiyrzah" />
 
 	<!-- Title -->
-	<title>Cvio - Resume/CV Template</title>
+	<title> Nirja Gauchan - UI/UX Portfolio </title>
 
 	<!-- Fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i&amp;display=swap&amp;subset=cyrillic" rel="stylesheet">
