--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 	<meta name="description" content="Nirja Gauchan Personal Website" />
-	<meta name="keywords" content="vcard, responsive, resume, personal, card, cv, designer, ui, ux, portfolio" />
+	<meta name="keywords" content="vcard, responsive, resume, personal, card, cv, graphic designer, ui, ux, portfolio" />
 	<meta name="author" content="neiyrzah" />
 
 	<!-- Title -->
