Send message to Nirja

--- a/contact.html
+++ b/contact.html
@@ -29,18 +29,6 @@
 
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicons/favicon.ico">
 
-
-
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-125314689-9"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-
-	  gtag('config', 'UA-125314689-9');
-	</script>
-
 </head>
 
 <body>
@@ -184,7 +172,7 @@
 
 					<!-- form -->
 					<div class="contact_form content-box">
-						<form id="cform" method="post">
+						<form action="https://formspree.io/xpzrprbo" method="POST">
 							<div class="group-val">
    								<input type="text" name="name" placeholder="Name" />
 							</div>
