--- a/index.html
+++ b/index.html
@@ -55,12 +55,12 @@
                 <div class="slider-typography text-center">
                     <div class="slider-text-middle-main sm-padding-15px-lr">
                         <div class="slider-text-middle">
-                            <img src="images/logo/logo-white.png" data-rjs="images/logo/logo-white@2x.png" class="margin-eight-bottom" alt=""/>
-                            <span class="alt-font title-extra-large font-weight-700 text-uppercase d-block text-t50 margin-15px-bottom">Coming Soon!</span>
+                            <img src="images/logo/logo-white-big.svg" data-rjs="images/logo/logo-white@2x.png" class="margin-eight-bottom" alt=""/>
+                            <span class="alt-font title-large font-weight-700 text-uppercase d-block text-t50 margin-15px-bottom">Coming Soon!</span>
                             <div class="position-relative overflow-hidden width-50 sm-width-80 mx-auto margin-eight-bottom">
                                 <span class="text-large text-outside-line-full alt-font text-uppercase">This site is under construction.</span>
                             </div>
-                            <h5 class="alt-font text-uppercase text-white-2 font-weight-600">we'll be live shortly</h5>
+                            <h5 class="alt-font text-uppercase text-white-2 font-weight-600">We'll be live shortly</h5>
                             <div class="social-icon-style-10 margin-30px-top">
                                 <ul class="medium-icon">
                                     <li><a class="facebook text-white-2" href="https://www.facebook.com/nirjagauchandesigns" target="_blank"><i class="fab fa-facebook-f"></i><span></span></a></li>
